--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Simple Framework - by Geroblee
+Simple Jade Framework - by Geroblee
 
-A HTML, CSS, JS starting template for web applications or static websites.
+A Jade starting template for web applications.
 
 TODO - Add more information on standards and libraries used.
